Style array into list

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         <label id="number">Enter a number:</label>
         <input type="text" id="numberInput" required>
       </div>
-      <button type="submit" class="btn btn-warning">Submit</button>
+      <button type="submit" class="btn btn-warning" onclick"reset">Submit</button>
       </form>
 
       <div class="output">
-        <span id="textOutput"></span>
+        <ul id="textOutput">
+        </ul>
       </div>
     </div>
   </body>
