add form empty to refresh output results

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       <div class="jumbotron">
         <h1>Ping Pong</h1>
       </div>
-      <form id="numeralProcess">
+      <form id="processNumber">
       <div class="form-group">
         <label id="number">Enter a number:</label>
         <input type="text" id="numberInput" required>
       </div>
-      <button type="submit" class="btn btn-warning" onclick"reset">Submit</button>
+      <button type="submit" class="btn btn-warning">Submit</button>
       </form>
 
       <div class="output">
