add design to page

--- a/index.html
+++ b/index.html
@@ -6,20 +6,22 @@
     <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
     <script src="js/scripts.js"></script>
     <meta charset="utf-8">
-    <title>Ping Pong</title>
+    <title>PING PONG</title>
   </head>
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Ping Pong</h1>
+        <h1>PING PONG</h1>
       </div>
-      <form id="processNumber">
-      <div class="form-group">
-        <label id="number">Enter a number:</label>
-        <input type="text" id="numberInput" required>
+      <div class="mid-section">
+        <form id="processNumber">
+        <div class="form-group">
+          <h2><label id="number">ENTER A NUMBER:</label></h2>
+          <input type="text" class="form-control" id="numberInput" required>
+        </div>
+        <button type="submit" class="btn btn-warning">SUBMIT</button>
+        </form>
       </div>
-      <button type="submit" class="btn btn-warning">Submit</button>
-      </form>
 
       <div class="output">
         <ul id="textOutput">
