add design refinements

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <div class="mid-section">
         <form id="processNumber">
         <div class="form-group">
-          <h2><label id="number">ENTER A NUMBER:</label></h2>
-          <input type="text" class="form-control" id="numberInput" required>
+          <h2><label class="control-label" id="number">ENTER A NUMBER:</label></h2>
+          <input type="text" class="form-control" id="numberInput" aria-describedby="inputError2Status" required>
         </div>
         <button type="submit" class="btn btn-warning">SUBMIT</button>
         </form>
