--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"  crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
-    <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.0.js"></script>
+    <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
     <script src="js/scripts.js"></script>
     <meta charset="utf-8">
     <title>PING PONG</title>
@@ -12,6 +13,8 @@
     <div class="container">
       <div class="jumbotron">
         <h1>PING PONG</h1>
+        <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+        <p>Level 2 Test for PHP</p>
       </div>
       <div class="mid-section">
         <form id="processNumber">
