--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>PING PONG</h1>
-        <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
-        <p>Level 2 Test for PHP</p>
+        <div id="bounce-fix">
+          <h1>PING PONG</h1>
+          <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+          <p>Level 2 Test for PHP</p>
+        </div>
       </div>
       <div class="mid-section">
         <form id="processNumber">
